--- a/css/estilos.css
+++ b/css/estilos.css
@@ -451,7 +451,7 @@ main .disciplinas .disciplinas-contenedor {
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 50px; }
-    .rebajas-pag .rebajas-contenedor div {
+    .rebajas-pag .rebajas-contenedor .imagenes-rebajas {
       width: 340px;
       height: auto;
       justify-content: center;
@@ -459,40 +459,40 @@ main .disciplinas .disciplinas-contenedor {
       display: flex;
       margin: 12px;
       padding: 3px; }
-      .rebajas-pag .rebajas-contenedor div a {
+      .rebajas-pag .rebajas-contenedor .imagenes-rebajas a {
         text-decoration: none;
         color: black;
         text-align: center;
         justify-content: center;
         width: 270px;
         height: auto; }
-        .rebajas-pag .rebajas-contenedor div a img {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img {
           width: 220px;
           height: 220px;
           text-align: center;
           justify-content: center; }
-        .rebajas-pag .rebajas-contenedor div a h3 {
-          text-align: center;
-          justify-content: center;
-          font-family: 'Lato', sans-serif;
-          font-size: 16px;
-          width: 270px;
-          height: 20px;
-          margin-top: 7px; }
-        .rebajas-pag .rebajas-contenedor div a div {
-          width: 250px;
-          height: 20px;
-          display: flex;
-          flex-direction: row;
-          margin-bottom: 5px; }
-          .rebajas-pag .rebajas-contenedor div a div strong {
-            font-size: 15px;
-            margin: 3px;
-            margin-top: 10px; }
-          .rebajas-pag .rebajas-contenedor div a div del {
-            font-size: 14px;
-            margin: 3px;
-            margin-top: 10px; }
+          .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img h3 {
+            text-align: center;
+            justify-content: center;
+            font-family: 'Lato', sans-serif;
+            font-size: 10px;
+            width: 270px;
+            height: 20px;
+            margin-top: 7px; }
+          .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img div {
+            width: 250px;
+            height: 20px;
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 5px; }
+            .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img div strong {
+              font-size: 15px;
+              margin: 3px;
+              margin-top: 10px; }
+            .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img div del {
+              font-size: 14px;
+              margin: 3px;
+              margin-top: 10px; }
 
 footer .suscripcion {
   flex: 1 1 25%;
@@ -532,8 +532,7 @@ footer .footer-contenedor {
   width: 100%;
   display: grid;
   grid-template-columns: repeat 4, 25%;
-  grid-template-areas: "footer footer footer footer"
- "footer footer footer footer";
+  grid-template-areas: "footer footer footer footer" "footer footer footer footer";
   margin: 20px;
   margin-bottom: 0; }
   footer .footer-contenedor div {
@@ -584,7 +583,7 @@ footer .footer-contenedor {
         height: 45px; }
 
 @media screen and (max-width: 1000px) {
-  .header nav div {
+  header h2 div {
     justify-content: space-between; } }
 
 @media screen and (max-width: 900px) {
@@ -818,8 +817,7 @@ footer .footer-contenedor {
     width: 100%;
     display: grid;
     grid-template-columns: repeat 2, 1fr;
-    grid-template-areas: "footer footer"
- "footer footer";
+    grid-template-areas: "footer footer" "footer footer";
     margin: 10px;
     margin-bottom: 0; }
     footer .footer-contenedor div {
@@ -917,8 +915,7 @@ footer .footer-contenedor {
     width: 100%;
     display: grid;
     grid-template-columns: repeat 2, 1fr;
-    grid-template-areas: "footer footer"
- "footer footer";
+    grid-template-areas: "footer footer" "footer footer";
     margin: 5px;
     margin-bottom: 0; }
     footer .footer-contenedor div {
@@ -1417,7 +1414,7 @@ footer .footer-contenedor {
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 50px; }
-    .rebajas-pag .rebajas-contenedor div {
+    .rebajas-pag .rebajas-contenedor .imagenes-rebajas {
       width: 280px;
       height: auto;
       justify-content: center;
@@ -1426,34 +1423,37 @@ footer .footer-contenedor {
       flex-direction: column;
       margin: 12px;
       padding: 3px; }
-      .rebajas-pag .rebajas-contenedor div a {
+      .rebajas-pag .rebajas-contenedor .imagenes-rebajas a {
         text-decoration: none;
         color: black;
         text-align: center;
         justify-content: center;
         width: 250px;
         height: auto; }
-        .rebajas-pag .rebajas-contenedor div a img {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img {
           width: 170px;
           height: 170px;
           text-align: center;
           justify-content: center; }
-        .rebajas-pag .rebajas-contenedor div a h3 {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a h3 {
           text-align: center;
           justify-content: center;
           font-size: 12px;
           width: 220px;
           height: 10px; }
-        .rebajas-pag .rebajas-contenedor div a div {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a div {
           width: 200px;
           height: 16px;
           display: flex;
           flex-direction: row;
           margin-bottom: 5px; }
-          .rebajas-pag .rebajas-contenedor div a div strong {
+          .rebajas-pag .rebajas-contenedor .imagenes-rebajas a div strong {
             font-size: 12px; }
-          .rebajas-pag .rebajas-contenedor div a div del {
-            font-size: 11px; } }
+          .rebajas-pag .rebajas-contenedor .imagenes-rebajas a div del {
+            font-size: 11px; }
+    .rebajas-pag .rebajas-contenedor .carousel-rebajas div div {
+      width: 250px;
+      height: 250px; } }
 
 @media screen and (max-width: 1100px) {
   .rebajas-pag .rebajas-contenedor {
@@ -1463,7 +1463,7 @@ footer .footer-contenedor {
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 50px; }
-    .rebajas-pag .rebajas-contenedor div {
+    .rebajas-pag .rebajas-contenedor .imagenes-rebajas {
       width: 170px;
       height: auto;
       justify-content: center;
@@ -1472,32 +1472,32 @@ footer .footer-contenedor {
       flex-direction: column;
       margin: 12px;
       padding: 3px; }
-      .rebajas-pag .rebajas-contenedor div a {
+      .rebajas-pag .rebajas-contenedor .imagenes-rebajas a {
         text-decoration: none;
         color: black;
         text-align: center;
         justify-content: center;
         width: 170px;
         height: auto; }
-        .rebajas-pag .rebajas-contenedor div a img {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img {
           width: 130px;
           height: 130px; }
-        .rebajas-pag .rebajas-contenedor div a h3 {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a h3 {
           text-align: center;
           justify-content: center;
           font-size: 8px;
           width: 165px;
           height: 10px; }
-        .rebajas-pag .rebajas-contenedor div a div {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a div {
           width: 165px;
           height: 10px;
           display: flex;
           flex-direction: row; }
-          .rebajas-pag .rebajas-contenedor div a div strong {
+          .rebajas-pag .rebajas-contenedor .imagenes-rebajas a div strong {
             font-size: 8px;
             margin: 2px;
             margin-top: 5px; }
-          .rebajas-pag .rebajas-contenedor div a div del {
+          .rebajas-pag .rebajas-contenedor .imagenes-rebajas a div del {
             font-size: 8px;
             margin: 2px;
             margin-top: 5px; } }
@@ -1510,7 +1510,7 @@ footer .footer-contenedor {
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 30px; }
-    .rebajas-pag .rebajas-contenedor div {
+    .rebajas-pag .rebajas-contenedor .imagenes-rebajas {
       width: 103px;
       height: auto;
       justify-content: center;
@@ -1519,34 +1519,34 @@ footer .footer-contenedor {
       flex-direction: column;
       margin: 6px;
       padding: 1px; }
-      .rebajas-pag .rebajas-contenedor div a {
+      .rebajas-pag .rebajas-contenedor .imagenes-rebajas a {
         text-decoration: none;
         color: black;
         text-align: center;
         justify-content: center;
         width: 75px;
         height: auto; }
-        .rebajas-pag .rebajas-contenedor div a img {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img {
           width: 75px;
           height: 75px;
           text-align: center;
           justify-content: center; }
-        .rebajas-pag .rebajas-contenedor div a h3 {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a h3 {
           text-align: center;
           justify-content: center;
           font-size: 7px;
           width: 75px; }
-        .rebajas-pag .rebajas-contenedor div a div {
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a div {
           width: 75px;
           display: flex;
           flex-direction: row;
           margin-bottom: 5px;
           margin-top: 15px; }
-          .rebajas-pag .rebajas-contenedor div a div strong {
+          .rebajas-pag .rebajas-contenedor .imagenes-rebajas a div strong {
             font-size: 6px;
             margin: 2px;
             margin-top: 6px; }
-          .rebajas-pag .rebajas-contenedor div a div del {
+          .rebajas-pag .rebajas-contenedor .imagenes-rebajas a div del {
             font-size: 6px;
             margin: 2px;
             margin-top: 6px; } }
