--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -34,9 +34,10 @@ footer{
                         button{
                             height: 45px;
                             width: 120px;
-                            background-color: #FF2931;
-                            border: 2px $color-primario;
                             margin-left: 0;
+                            background-color: map-get($boton, bg-boton);
+                            border: map-get($boton, border-boton);
+                            color: map-get($boton, color-text);
                         }
                     }
                 }
@@ -44,7 +45,7 @@ footer{
         }
     }
     .footer-contenedor{
-        width: 100%;
+        width: auto;
         display: grid;
         grid-template-columns: repeat (4, 25%);
         grid-template-areas:
@@ -53,6 +54,7 @@ footer{
         ;
         margin: 20px;
         margin-bottom: 0;
+        justify-content: space-around;
         div{
             grid-area: "footer";
             display: flex;
@@ -61,8 +63,7 @@ footer{
             padding: 5px;
             margin: 10px;
             justify-content: center;
-            align-items: start;
-            width: auto;
+            width: 100%;
             height: 280px;
             h3{
                 margin-left: 12px;
@@ -96,6 +97,7 @@ footer{
                 text-align: center;
                 justify-content: center;
                 margin-bottom: 12px;
+                margin-right: 15px;
             }
             ul{
                 li{
