--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,14 +5,12 @@ header{
     width: 100%;
     z-index: 5;
     h2{
-        color: white;
+        color: $color-secundario;
         text-align: center;
         font-size: 20px;
         font-family: 'Lato', sans-serif;;
         font-style: italic;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @extend %flex;
         background-color: $color-primario;
         height: 40px;
     }
@@ -41,7 +39,7 @@ header{
             #navbarSupportedContent{
                 ul{
                     font-size: 18px;
-                    color: black;
+                    color: $color-primario;
                     li{
                         ul{
                             li{
